# component-google-cloud-storage-extractor

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_n_test.yml  deploy.yml  push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
src/: component.py  configuration.py
src/google_cloud_storage/: client.py
